crates/spt-tui/tests/snapshots/pages_snapshots__endpoints_page_global_auth_marker_120x20.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
assertion_line: 355
expression: snap
---
┌Endpoints (a=add, d=del, Enter=edit)────┐┌Detail──────────────────────────────────────────────────────────────────────┐
│▶      primary edge-1.example.com:22  p=││name:     primary                                                           │
│      override edge-2.example.com:22  p=││host:     edge-1.example.com                                                │
│                                        ││port:     22                                                                │
│                                        ││priority: 0                                                                 │
│                                        ││weight:                                                                     │
│                                        ││user:                                                                       │
│                                        ││auth:     auth=global                                                       │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
│                                        ││                                                                            │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────┘
