crates/spt-tui/tests/snapshots/pages_snapshots__events_page_binding_editor_dedupe_100x50.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
   ┌tags───────────────────────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Sinks (Tab to focus)─────────────┐┌Sink detail────────────────────────────────────────────────────┐
│▶        webhook [http]          ││name:   webhook                                                │
│                                 ││type:   http                                                   │
│                                 ││url:    https://example.com/hook                               │
│                                 ││method:                                                        │
│                                 ││auth:                                                          │
│                                 ││vapid:                                                         │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
┌Bindings* (a=add d=del Enter=edit┐┌name───────────────────────────────────────────────────────────┐
│▶        on-fail on=[profile.fail││on-fail                                                        │
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌on─────────────────────────────────────────────────────────────┐
│                                 ││profile.failed, memory.leak_suspected                          │
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌actions────────────────────────────────────────────────────────┐
│                                 ││webhook                                                        │
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌min_level──────────────────────────────────────────────────────┐
│                                 ││warn                                                           │
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌throttle───────────────────────────────────────────────────────┐
│                                 ││1m                                                             │
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌dedupe.key─────────────────────────────────────────────────────┐
│                                 ││kind                                                           │
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌dedupe.window──────────────────────────────────────────────────┐
│                                 ││90s                                                            │
│                                 │└───────────────────────────────────────────────────────────────┘
└─────────────────────────────────┘
