crates/spt-tui/tests/snapshots/pages_snapshots__events_page_bindings_focused_100x30.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
   ┌tags───────────────────────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Sinks (Tab to focus)─────────────┐┌Sink detail────────────────────────────────────────────────────┐
│▶        webhook [http]          ││name:   webhook                                                │
│        notifier [mcp_notify]    ││type:   http                                                   │
│                                 ││url:    https://example.com/hook                               │
│                                 ││method: POST                                                   │
│                                 ││auth:                                                          │
│                                 ││vapid:                                                         │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
┌Bindings* (a=add d=del Enter=edit┐┌Binding detail─────────────────────────────────────────────────┐
│▶        on-fail on=[profile.fail││name:      on-fail                                             │
│                                 ││on:        profile.failed, endpoint.down                       │
│                                 ││actions:   webhook                                             │
│                                 ││min_level: warn                                                │
│                                 ││throttle:                                                      │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
