crates/spt-tui/tests/snapshots/pages_snapshots__events_page_commands_region_100x40.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
   ┌tags───────────────────────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Sinks (Tab to focus)─────────────┐┌Sink detail────────────────────────────────────────────────────┐
│▶        webhook [http]          ││name:   webhook                                                │
│                                 ││type:   http                                                   │
│                                 ││url:    https://example.com/hook                               │
│                                 ││method:                                                        │
│                                 ││auth:                                                          │
│                                 ││vapid:                                                         │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
┌Bindings (Tab to focus)──────────┐┌Binding detail─────────────────────────────────────────────────┐
│▶        on-fail on=[profile.fail││name:      on-fail                                             │
│                                 ││on:        profile.failed                                      │
│                                 ││actions:   runit                                               │
│                                 ││min_level:                                                     │
│                                 ││throttle:                                                      │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
┌Commands* (a=add d=del Enter=edit┐┌Command detail─────────────────────────────────────────────────┐
│▶          runit [/usr/bin/notify││name:       runit                                              │
│                                 ││command:    /usr/bin/notify                                    │
│                                 ││args:       --urgent                                           │
│                                 ││allow_exec: true                                               │
│                                 ││timeout:                                                       │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
