crates/spt-tui/tests/snapshots/pages_snapshots__events_page_email_editor_100x40.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
   ┌tags───────────────────────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Sinks* (a=add d=del Enter=edit)──┐┌name───────────────────────────────────────────────────────────┐
│▶         mailer [email]         │└───────────────────────────────────────────────────────────────┘
│                                 │┌type───────────────────────────────────────────────────────────┐
│                                 │┌smtp───────────────────────────────────────────────────────────┐
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌from───────────────────────────────────────────────────────────┐
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌to─────────────────────────────────────────────────────────────┐
│                                 │┌body_template──────────────────────────────────────────────────┐
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌auth───────────────────────────────────────────────────────────┐
│                                 │┌timeout────────────────────────────────────────────────────────┐
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌pin_spki_sha256────────────────────────────────────────────────┐
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌allow_self_signed──────────────────────────────────────────────┐
│                                 │┌max_cert_chain_depth───────────────────────────────────────────┐
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
┌Bindings (Tab to focus)──────────┐┌Binding detail─────────────────────────────────────────────────┐
│                                 ││(no bindings — press `a` to add)                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
