crates/spt-tui/tests/snapshots/pages_snapshots__events_page_settings_region_100x50.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
   ┌tags───────────────────────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Sinks (Tab to focus)─────────────┐┌Sink detail────────────────────────────────────────────────────┐
│▶        webhook [http]          ││name:   webhook                                                │
│                                 ││type:   http                                                   │
│                                 ││url:    https://example.com/hook                               │
│                                 ││method:                                                        │
│                                 ││auth:                                                          │
│                                 ││vapid:                                                         │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
┌Bindings (Tab to focus)──────────┐┌Binding detail─────────────────────────────────────────────────┐
│▶        on-fail on=[profile.fail││name:      on-fail                                             │
│                                 ││on:        profile.failed                                      │
│                                 ││actions:   webhook                                             │
│                                 ││min_level:                                                     │
│                                 ││throttle:                                                      │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
┌Events settings* (Enter=edit ↑/↓=move region)─────────────────────────────────────────────────────┐
│┌ring_capacity───────────────────────────────────────────────────────────────────────────────────┐│
││2048                                                                                            ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌retry_interval──────────────────────────────────────────────────────────────────────────────────┐│
││45s                                                                                             ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌spool_dir───────────────────────────────────────────────────────────────────────────────────────┐│
││/var/spool/spt                                                                                  ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌spool_max_bytes─────────────────────────────────────────────────────────────────────────────────┐│
││32MiB                                                                                           ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│┌default_min_level───────────────────────────────────────────────────────────────────────────────┐│
││warn                                                                                            ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
