crates/spt-tui/tests/snapshots/pages_snapshots__events_page_sink_editor_http_100x30.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
   ┌tags───────────────────────────────────────────────────────────────────────────────────────────┐
 ▶ │                                                                                               │
   └───────────────────────────────────────────────────────────────────────────────────────────────┘


┌Sinks* (a=add d=del Enter=edit)──┐┌name───────────────────────────────────────────────────────────┐
│▶        webhook [http]          │┌type───────────────────────────────────────────────────────────┐
│        notifier [mcp_notify]    │└───────────────────────────────────────────────────────────────┘
│                                 │┌url────────────────────────────────────────────────────────────┐
│                                 │┌method─────────────────────────────────────────────────────────┐
│                                 │┌content_type───────────────────────────────────────────────────┐
│                                 │└───────────────────────────────────────────────────────────────┘
│                                 │┌timeout────────────────────────────────────────────────────────┐
│                                 │┌auth───────────────────────────────────────────────────────────┐
│                                 │┌pin_spki_sha256────────────────────────────────────────────────┐
│                                 │┌allow_self_signed──────────────────────────────────────────────┐
│                                 │└───────────────────────────────────────────────────────────────┘
└─────────────────────────────────┘┌max_cert_chain_depth───────────────────────────────────────────┐
┌Bindings (Tab to focus)──────────┐┌Binding detail─────────────────────────────────────────────────┐
│▶        on-fail on=[profile.fail││name:      on-fail                                             │
│                                 ││on:        profile.failed, endpoint.down                       │
│                                 ││actions:   webhook                                             │
│                                 ││min_level: warn                                                │
│                                 ││throttle:                                                      │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
