crates/spt-tui/tests/snapshots/pages_snapshots__events_page_subscription_sub_editor_100x30.snap
---
source: crates/spt-tui/tests/pages_snapshots.rs
expression: snap
---
┌Subscriptions* (a=add d=del Enter┐┌Subscription detail────────────────────────────────────────────┐
│▶ #0 https://push.example/ep1    ││endpoint: https://push.example/ep1                             │
│                                 ││p256dh:   BPUBLICKEY                                           │
│                                 ││auth:     [REDACTED]                                           │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
│                                 ││                                                               │
└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘
